--- a/index.html
+++ b/index.html
@@ -13,3 +13,19 @@
     </div>
   </div>
 </div>
+
+
+vol 2
+
+<div class="h-10 w-10 bg-gray-600">
+  <!-- <div class="opacity-50 blur-3xl filter"> -->
+  <!-- <div class="z-0 opacity-50 blur-3xl"> -->
+    <div class="animate-blob absolute left-32 top-48 h-96 w-96 rounded-full bg-purple-300 mix-blend-multiply"></div>
+    <div class="animation-delay-2000 animate-blob absolute right-36 top-36 h-96 w-96 rounded-full bg-green-300 mix-blend-multiply"></div>
+    <div class="animation-delay-4000 animate-blob absolute right-64 top-80 h-96 w-96 rounded-full bg-yellow-300 mix-blend-multiply"></div>
+  </div>
+
+  <div class=""></div>
+  <div class=""></div>
+</div>
+
